tdf#129004 Make shift+F6 cycle order reverse of F6

Change-Id: I52013b4c54ef5e457d9fa19210d08d9c042fed45
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/83637
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>